<resources>
    <string name="app_name">FitgoUp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home_dashboard">PushFit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Settings</string>
    <string name="fourth_fragment">Fourth Fragment</string>
    <string name="third_fragment">Third Fragment</string>
    <string name="fragment_one">Start</string>
    <string name="calendar_fragment">Calendar</string>
    <string name="start_button_text">Start</string>
    <string name="restart_button">Restart</string>
    <string name="init_timer">00:00:00</string>
    <string name="start_timer">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="no_data">No data available</string>
    <string name="pushfit_slide1_description">PushFit is an application that helps you count the
    number of push ups you\'ve done in a day. with PushFit, you can customize how frequently you
        want to
    workout.</string>
    <string name="appintro_slide2_howtouse">"Place your device just under your head and click the
     start button to start recording your push ups. There are two options;
        With the <b>Countdown Timer</b> option selected, when the time you specified ends, the
        number of push ups you recorded will be saved automatically.
        For <b>Sensor Counter</b>, you set the minimum number of push ups you can do,
        when you reach the specified amount of push ups, you\'ll be notified and the push ups
        recorded.
        "</string>
    <string name="skip_tutorial">You\'ve skipped the tutorial</string>
    <string name="title_activity_home_drawer">PushFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="click_to_start_exercising">Start push ups</string>
</resources>
