<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/push_up"
            android:icon="@drawable/ic_fitness_center"
            android:title="Push up"/>

        <item
            android:id="@+id/stats"
            android:icon="@drawable/ic_show_chart"
            android:title="Reports"/>
        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_calendar"
            android:title="Calendar"/>

        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_settings_white"
            android:title="Settings"/>
    </group>

</menu>
